--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="info" *ngIf="info">
-    <h1>About Visualz Quaranstream v1.0.0</h1>
+    <h1>About Visualz Quaranstream</h1>
 
     <h2>Hosts:</h2>
     <ol>
@@ -330,3 +330,12 @@
         </gridster>
     </div>
 </div>
+
+<footer class="footer">
+    <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    &copy; VISUALZ Copyright 2019-2020. All Rights Reserved. &nbsp;&nbsp;|&nbsp;&nbsp;
+    Current v1.2.2 &nbsp;&nbsp;|&nbsp;&nbsp;
+    Created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
+</footer>
