--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -53,7 +53,7 @@
 mat-toolbar {
     position: absolute;
     z-index: 2;
-    bottom: 100px;
+    bottom: 120px;
     left: 0px;
     display: inline !important;
 }
@@ -64,6 +64,16 @@ mat-toolbar {
     position: absolute;
     top: 0px;
     left: 0px;
+    z-index: 1;
+}
+
+.guest-audio {
+    width:100vw;
+    height: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
 }
 
 
@@ -86,7 +96,7 @@ mat-toolbar {
     width: 100vw;
     height: 100px;
     position: absolute;
-    bottom: 0px; 
+    bottom: 20px; 
     z-index: 2;
 }
 
@@ -449,4 +459,23 @@ mat-button-toggle, gridster-item {
     //         border: 1px solid #fff;
     //     }
     // }
+}
+
+footer.footer{
+    position: absolute;
+    z-index: 6;
+    opacity: 0.3;
+    bottom: 0px;
+    width: 100vw;
+    font-size: 10px;
+    height: 20px;
+
+    background-image: none;
+    background: transparent;
+    padding: 0px;
+    
+
+    &:hover {
+        opacity:1.0;
+    }
 }
