--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,6 +69,7 @@
 <footer *ngIf="!interactive">
     <!-- <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <!-- <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
+    <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/how-it-works">Start Here</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/support">Support</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <!-- <a routerLink="/investors">Investors</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
@@ -82,7 +83,7 @@
     <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
-    &copy; VISUALZ Copyright 2019. All Rights Reserved.
+    &copy; VISUALZ Copyright 2019-2020. All Rights Reserved.
     <br>
     Current v1.2.2
     <br>
