--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -205,18 +205,21 @@
         DEMO</button>
 </header>
 -->
+<!-- 
 <header class="skew">
     <h2>Quick Setup</h2>
 </header>
 <div class="content-wrapper white">
     <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
 </div>
-
+-->
 <header class="skew big-only">
     <h2>How It Works</h2>
 </header>
-<div class="content-inner-wrapper big-only">
-    <app-htw style="margin:120px auto; display: block;"></app-htw>
+<div class="content-wrapper white">
+    <div class="content-inner-wrapper big-only">
+        <app-htw style="margin:120px auto; display: block; box-shadow:0px 10px 60px 0px #aaa;"></app-htw>
+    </div>
 </div>
 
 <!-- XCHANGE 
