--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -22,7 +22,7 @@
             </mat-form-field>
             <br><Br>
             <button (click)="start()" mat-raised-button class="pink button bigtext">
-                Start
+                Start Streaming
             </button>
         </form>
 
