--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -38,7 +38,7 @@
 
 </div>
 
-<div class="true-bg">
+<div class="true-bg" [hidden]="!mainLoading">
     <div class="loader"></div>
     If loading takes too long try refreshing the page.
 </div>
