--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <!--<a routerLink="/filter">Filter</a>-->
 
         <button mat-button routerLink="/">HOME</button>
-
+        <button mat-button routerLink="/start">STREAM</button>
         <button mat-button routerLink="/download">DOWNLOAD FREE</button>
 
         <!-- <button mat-button routerLink="/prices">PRICES</button> -->
@@ -33,7 +33,6 @@
         <a routerLink="/support">SUPPORT</a>
         <a routerLink="/how-it-works">HOW IT WORKS</a>
         -->
-        <button mat-button routerLink="/start">QUARANSTREAM</button>
 
         <button mat-button [matMenuTriggerFor]="menu">HELP</button>
         <mat-menu #menu="matMenu">
@@ -70,9 +69,9 @@
     <!-- <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <!-- <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/how-it-works">Start Here</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/start">Stream</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/how-it-works">Help</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/support">Support</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a routerLink="/investors">Investors</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/privacy-policy">Privacy Policy</a>
