--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -353,7 +353,9 @@
 </div>
 
 <footer class="footer">
+
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/start">Stream</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     &copy; VISUALZ Copyright 2019-2020. All Rights Reserved. &nbsp;&nbsp;|&nbsp;&nbsp;
