--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -30,7 +30,7 @@
 </div>
 
 <header class="skew big-only">
-    <h2>BROWSE QUARANSTREAMS</h2>
+    <h2>BROWSE STREAMS</h2>
     <small>*Streams are removed after 24 hours.</small>
 </header>
 <div class="content-wrapper white feature">
