--- a/src/styles.scss
+++ b/src/styles.scss
@@ -396,7 +396,7 @@ header {
     
 
     a.logo {
-        color: #333;
+        color: #fff;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 40px;
