live stream polish

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -2,9 +2,10 @@
     <div class="main">
         <h1>Realtime Audio Reactive Graphics</h1>
         <h2>
-            Free visual software for live events &amp; streams. Hey DJs, VJs, Artists, and Venues.
+            Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues.
         </h2>
-        <a routerLink="/download" class="download">DOWNLOAD FREE</a>
+        <a routerLink="/start" class="download">STREAM IN BROWSER</a>
+        <a routerLink="/download" class="download">DOWNLOAD v1.2.2</a>
     </div>
     <div class='macwrap'>
         <img src='../../assets/images/macbook.png' class='macbook' />
