--- a/src/app/visualz/visualz.component.scss
+++ b/src/app/visualz/visualz.component.scss
@@ -1,5 +1,10 @@
 .download {
     position: relative;
     z-index: 2;
+
+    &:hover {
+        background: #fff;
+        color: #333;
+    }
 }
 
