live stream polish

--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -80,7 +80,7 @@
     </ol>
 
     <h1>Share This Streaming URL</h1>
-    <input type="text" value="http://www.visualzStudio.com/live/{{roomName}}" />
+    <input type="text" value="https://www.visualzStudio.com/live/{{roomName}}" />
 
     <p>
         This is a beta. This has only been tested on chrome for the time being. So please be cautious of other
