live stream polish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
             <button mat-menu-item routerLink="/support">COMMUNITY</button>
             <button mat-menu-item [matMenuTriggerFor]="menuT">TOOLS</button>
             <mat-menu #menuT="matMenu">
-                <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4</button>
+                <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
                 <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
             </mat-menu>
         </mat-menu>
@@ -71,7 +71,7 @@
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/start">Stream</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/how-it-works">Help</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/support">Support</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/support">Community</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/privacy-policy">Privacy Policy</a>
