--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -173,6 +173,12 @@ mat-button-toggle, gridster-item {
     margin-left: 20px;
 }
 
+.bump {
+    margin-left: 20px;
+    transform: scale(0.8);
+
+}
+
 mat-toolbar-row {
     button {
         margin-right: 10px;
