--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -256,7 +256,7 @@
         <div id="disqus_thread" style="margin:200px auto;"></div>
     </div>
 </div>-->
-
+<!-- Collaborators -->
 <header class="skew">
     <h2>Collaborators</h2>
 </header>
@@ -277,6 +277,52 @@
         <div class="clearfix"></div>
     </div>
 </div>
+
+<header class="skew">
+    <h2>Keep Up With Us</h2>
+    <h3>Get notified about new releases and other updates.</h3>
+</header>
+<div class="content-wrapper white small-bottom" style="min-height: calc(100vh - 450px);">
+    <div class="">
+
+        <!-- Begin Mailchimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup {
+                clear: left;
+                width: 100%;
+            }
+
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+            <form
+                action="https://dutchess.us7.list-manage.com/subscribe/post?u=81486f81685beb71289ee6fe1&amp;id=ea72b92f29"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <input style="width:50vw; height:80px; display:block; margin: 0px auto; font-size:35px;"
+                        type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address"
+                        required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_81486f81685beb71289ee6fe1_ea72b92f29" tabindex="-1" value="">
+                    </div>
+                    <div class="clear">
+                        <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe"
+                            class="button mat-button"
+                            style="clear: both; color:#333; height: 70px; font-size: 20px; margin-top: 20px; padding:20px;">
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="clearfix"></div>
+    </div>
+</div>
+
+<!--End mc_embed_signup-->
 
 <!--
 <header>
